--- a/.github/workflows/deploy_uat.yml
+++ b/.github/workflows/deploy_uat.yml
@@ -6,11 +6,15 @@ on:
     inputs:
       name:
         # Friendly description to be shown in the UI instead of 'name'
-        description: 'Person to greet2'
+        description: 'Are you sure you want to deploy a new version to the UAT?'
         # Default value if no value is explicitly provided
-        default: 'World2'
+        default: 'yes'
         # Input has to be provided for the workflow to run
         required: true
+      branch:
+        description: 'Branch to checkout'
+        default: 'develop'
+        required: 'true'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
