--- a/.github/workflows/deploy_uat.yml
+++ b/.github/workflows/deploy_uat.yml
@@ -14,7 +14,7 @@ on:
       branch:
         description: 'Branch to checkout'
         default: 'develop'
-        required: 'true'
+        required: true
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
